--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.5",
+    "react-simple-typewriter": "^5.0.1",
+    "react-tooltip": "^5.30.0",
     "sweetalert2": "^11.26.3",
     "tailwindcss": "^4.1.17"
   },
