--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router": "^7.9.5",
     "react-simple-typewriter": "^5.0.1",
     "react-tooltip": "^5.30.0",
+    "recharts": "^3.6.0",
     "sweetalert2": "^11.26.3",
     "tailwindcss": "^4.1.17"
   },
