--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "daisyui": "^5.4.7",
     "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
+    "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-datepicker": "^8.9.0",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router": "^7.9.5",
     "react-simple-typewriter": "^5.0.1",
     "react-tooltip": "^5.30.0",
